<resources>
    <string name="app_name">FRC Power Up Scouting App</string>
    <string name="btn">Save</string>
    <string name="btn_update">Edit</string>
    <string name="hint1">Team Number</string>
    <string name="hint2">Switches</string>
    <string name="hint3">Scales</string>
    <string name="hint4">Vaults</string>
    <string name="hint5">Climbs</string>
    <string name="hint6">Matches</string>
    <string name="hint7">N° Match</string>
</resources>
