<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/team_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint1" />

    <EditText
        android:id="@+id/switches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:hint="@string/hint2" />

    <EditText
        android:id="@+id/scales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:hint="@string/hint3" />

    <EditText
        android:id="@+id/vaults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:hint="@string/hint4" />

    <EditText
        android:id="@+id/climbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:hint="@string/hint5" />

    <Button
        android:id="@+id/confirmInsertion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn" />

</LinearLayout>